# slab_alloc

./: .gitignore  CMakeLists.txt
inc/: allocator.h  slab.h  test.h  utils.h
inc/mem/: pimem.h
src/: allocator.c  main.c  slab.c  test.c  utils.c
src/mem/: pimem.c  unixmem.c  winmem.c
